platform/prefect/postgresql.yaml
## Deployment ----------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prefect-postgresql
  namespace: prefect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prefect-postgresql
  template:
    metadata:
      labels:
        app: prefect-postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: prefect-postgresql-data

## Services ----------------
---
apiVersion: v1
kind: Service
metadata:
  name: prefect-postgresql
  namespace: prefect
spec:
  selector:
    app: prefect-postgresql
  ports:
    - port: 5432
      targetPort: 5432
      
## PVC -----------------------
