platform/prefect/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prefect
  namespace: prefect
spec:
  ingressClassName: traefik
  rules:
    - host: prefect.haziqhakimi.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prefect-server
                port:
                  number: 4200
